# ai4ose-lab1-2026s

doc/: daily.md  result-2.11-16.txt  thinking.md
doc/aichat_history/: 理解rCore easyfs文件处理流程01.md  理解rCore easyfs文件处理流程02.md
lab_tool/: README.md
lab_tool/src/: content.txt
os/ch1/: .gitignore  Cargo.toml  README.md  build.rs
os/ch1/src/: main.rs
os/ch2/: Cargo.toml  README.md  test.sh
os/ch2/.cargo/: config.toml
os/ch2/src/: main.rs
os/ch3/: Cargo.toml  README.md  test.sh
os/ch3/src/: main.rs  task.rs
os/ch4/: Cargo.toml  README.md  test.sh
os/ch4/src/: main.rs
os/ch5/: Cargo.toml  README.md  test.sh
os/ch5/src/: main.rs  process.rs  processor.rs
os/chX/: .gitignore  Cargo.toml
os/chX/src/: allocator.rs  main.rs  process.rs
os/tg-buddy-alloc/: Cargo.toml
os/tg-buddy-alloc/src/: lib.rs
