[package]
name = "tg-ch3"
description = "Chapter 3 of rCore Tutorial: Multiprogramming and time-sharing multitasking."
version = "0.3.0-preview.1"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
repository = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace"
homepage = "https://github.com/rcore-os/rCore-Tutorial-in-single-workspace/tree/test"
documentation = "https://docs.rs/tg-ch3"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["rcore", "tutorial", "no-std", "riscv", "multitasking"]
categories = ["no-std", "embedded"]
exclude = [
    "tg-user/**",
#    ".cargo/config.toml",
]

[features]
coop = []
exercise = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
riscv = "0.10.1"

tg-sbi = { version = "0.1.0-preview.1", features = ["nobios"] }
tg-linker = { version = "0.1.0-preview.2" }
tg-console = { version = "0.1.0-preview.2" }
tg-kernel-context = { version = "0.1.0-preview.1" }
tg-syscall = { version = "0.1.0-preview.2", features = ["kernel"] }

[build-dependencies]
tg-linker = { version = "0.1.0-preview.2" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"