[package]
name = "tg-chX"
description = "Chapter X: Buddy allocator exercise."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = [
    "tg-user/**",
]

[features]
exercise = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
xmas-elf = "0.8.0"
riscv = "0.10.1"

tg-sbi = { version = "0.1.0-preview.1", features = ["nobios"] }
tg-linker = { version = "0.1.0-preview.2" }
tg-console = { version = "0.1.0-preview.2" }
tg-kernel-context = { version = "0.1.0-preview.1", features = ["foreign"] }
tg-kernel-vm = { version = "0.1.0-preview.2" }
tg-syscall = { version = "0.1.0-preview.2", features = ["kernel"] }
tg-buddy-alloc = { path = "./tg-buddy-alloc" }

[build-dependencies]
tg-linker = { version = "0.1.0-preview.2" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
