[package]
name = "tg-buddy-alloc"
version = "0.1.0"
edition = "2021"
description = "A buddy allocator framework for rCore Tutorial. Students implement the BuddyAlloc trait."
license = "MIT OR Apache-2.0"
keywords = ["rcore", "tutorial", "no-std", "allocator", "buddy"]
categories = ["no-std", "memory-management"]

[features]
default = []
